gccida/c3/build_conditional_expr
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:3841:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:3871:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:3873:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:3874:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:3875:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:3902:2: error: expected expression
 struct expr = v5; 
 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:3909:14: error: expected identifier or '('
 struct expr = v5; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:4006:20: error: expected expression
v34 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/c-typeck.c:4006:9: error: use of undeclared identifier 'tree_node'
v34 = ( tree_node *)*( &global_trees + 27); 
        ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_conditional_expr/src/obj/c-typeck.o] Error 1
